--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "tailwindcss": "^3.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
